[package]
name = "filecoin-proofs-api"
version = "10.1.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.18", default-features = false }
bincode = "1.1.2"
blstrs = "0.4.0"
serde = "1.0.104"
filecoin-proofs-v1 = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0", package = "filecoin-proofs", version = "~10.1", default-features = false }
filecoin-hashers = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0", version = "~5.1", default-features = false, features = ["poseidon", "sha256"] }
fr32 = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0", version = "~3.1", default-features = false }
storage-proofs-core = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0", version = "~10.1", default-features = false }
storage-proofs-porep = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0", version = "~10.1", default-features = false }

[features]
default = ["opencl"]
cuda = ["filecoin-proofs-v1/cuda", "filecoin-hashers/cuda", "storage-proofs-core/cuda", "storage-proofs-porep/cuda", "bellperson/cuda", "fr32/cuda"]
opencl = ["filecoin-proofs-v1/opencl", "filecoin-hashers/opencl", "storage-proofs-core/opencl", "storage-proofs-porep/opencl", "bellperson/opencl", "fr32/opencl"]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]


# patch dependencies
[patch.crates-io]
bellperson = { git = "https://github.com/jobdeng/bellperson", branch = "job/v0.18.0" }
#filecoin-proofs-v1 = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0" }
#filecoin-hashers = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0" }
#fr32 = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0" }
#storage-proofs-core = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0" }
#storage-proofs-porep = { git = "https://github.com/jobdeng/rust-fil-proofs", branch = "job/v10.1.0" }